...
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="7HY-rR-uLN"/>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="30" id="Ifa-uu-8DD"/>
                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="szY-3J-3BR"/>
                                    <constraint firstAttribute="width" constant="30" id="v8m-kT-Ma8"/>
                                </constraints>
                                <state key="normal" title="Menu" image="menuButton.png">
                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7bh-28-1od">
                                <rect key="frame" x="475" y="97" width="75" height="75"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="75" id="4Z6-UA-Wqf"/>
                                    <constraint firstAttribute="width" constant="75" id="BtE-uN-IkG"/>
                                </constraints>
                                <state key="normal" title="Play" image="Play.png">
                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="playButtonClicked:" destination="BV1-FR-VrT" eventType="touchUpInside" id="tZk-5P-wh5"/>
                                </connections>
                            </button>
...
