...
        buttonNewGame.tag = 0;
        buttonNewGame.frame      =   CGRectMake(buttonNewGamePositionX, buttonsVerticalPosition, buttonWidth, 30.0);
        [buttonNewGame setBackgroundColor: [UIColor whiteColor]];
        [buttonNewGame setTitleColor: [UIColor colorWithRed:.349f green:.259f blue:.447f alpha:1] forState:UIControlStateNormal];
        [[buttonNewGame layer] setMasksToBounds:YES];
        [[buttonNewGame layer] setCornerRadius:5.0f];
        [buttonNewGame setTitle: @"New Game" forState:UIControlStateNormal];
        [buttonNewGame addTarget: self
                            action: @selector(newGame:)
                  forControlEvents: UIControlEventTouchUpInside];
        
        // Right: “Resume”
        UIButton *buttonContinue  =   [UIButton buttonWithType:UIButtonTypeRoundedRect];
        buttonContinue.tag = savedLevel;
        buttonContinue.frame      =   CGRectMake(buttonContinuePositionX, buttonsVerticalPosition, buttonWidth, 30.0);
        [buttonContinue setBackgroundColor: [UIColor whiteColor]];
        [buttonContinue setTitleColor: [UIColor colorWithRed:.349f green:.259f blue:.447f alpha:1] forState:UIControlStateNormal];
        [[buttonContinue layer] setMasksToBounds:YES];
        [[buttonContinue layer] setCornerRadius:5.0f];
        [buttonContinue setTitle: @"Resume" forState:UIControlStateNormal];
        [buttonContinue addTarget: self
                             action: @selector(continueButtonClicked:)
                   forControlEvents: UIControlEventTouchUpInside];
        
        [self.view addSubview: containerView];
        [containerView addSubview:myTextView];
...
